--- a/views/index.html
+++ b/views/index.html
@@ -8,12 +8,46 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 </head>
-<body>
-    <h4>Hello world from the future</h4>
-
-    <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
+<script>
+    <div class="container"  >
+        <div class="row" id="app">
+          
+          <div class="col-md-6">
+            <table class="table">
+              <tr>
+                <td>first_name</td>
+                <td>last_name</td>
+                <td>email</td>
+              </tr>
+              <tr v-for="user in users" v-bind:key="user.id">
+                <td>{{ user.first_name }} </td>
+                <td>{{ user.last_name}}</td>
+                <td>{{ user.email}} </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+   
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+<script>
+    var vm = new Vue({
+    el:'#app',
+    data: {
+      users: []
+    },
+    mounted: function() {
+      axios.get('https://reqres.in/api/users?page=2')
+      .then(res => res.json())
+      .then(data => {
+        this.users = data;
+        console.log(data)
+      })
+      .catch(error => console.log(error));
+    }
+  })
+   </script>
+
 </body>
 </html>
