--- a/views/index.html
+++ b/views/index.html
@@ -8,43 +8,78 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 </head>
-<script>
-    <div class="container"  >
-        <div class="row" id="app">
-          
-          <div class="col-md-6">
-            <table class="table">
-              <tr>
-                <td>first_name</td>
-                <td>last_name</td>
-                <td>email</td>
-              </tr>
-              <tr v-for="user in users" v-bind:key="user.id">
-                <td>{{ user.first_name }} </td>
-                <td>{{ user.last_name}}</td>
-                <td>{{ user.email}} </td>
-              </tr>
-            </table>
-          </div>
+ 
+    <div class="container">
+        <div class="row mt-5"  id="app">
+          <input type="number" class="form-control " v-model="cartNumber">
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">View cart</button>
+          <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+         <table class="table">
+           <tr>
+             <td>avatar</td>
+             <td>first_name</td>
+             <td>email</td>
+           </tr>
+           <tr class="text-dark" v-for="car in cart" :key="car.id">
+             <td><img :src="cart.avatar" style="width:50px; height:50px"></td>
+             <td>{{ cart.first_name }}</td>
+             <td>{{ cart.email }}</td>
+           </tr>
+         </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+          <div class="col-md-4" v-for="user in users" v-bind:key="user.id">
+            
+            <div class="card">
+              <img :src="user.avatar" class="card-img-top"  >
+              <div class="card-body">
+                <div>{{ user.first_name }} {{ user.last_name }}</div>
+                <button @click="addToCart(user)" class="btn btn-success mt-3">Add to cart</button>
+              </div>
+            </div>
+         
+          </input>
         </div>
       </div>
-   
- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
 <script>
     var vm = new Vue({
-    el:'#app',
+    el:"#app",
     data: {
-      users: []
+      users: [],
+      cartNumber: 0,
+      cart:[],
     },
     mounted: function() {
-      axios.get('https://reqres.in/api/users?page=2')
+     fetch('https://reqres.in/api/users?page=2')
       .then(res => res.json())
       .then(data => {
-        this.users = data;
+        this.users = data.data;
         console.log(data)
       })
       .catch(error => console.log(error));
+    },
+    methods :{
+      addToCart(user){
+        this.cart.push(user);
+        this.cartNumber++;
+      }
     }
   })
    </script>
